--- a/MvcApplication1/MvcApplication1/Web.config
+++ b/MvcApplication1/MvcApplication1/Web.config
@@ -10,6 +10,17 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MvcApplication1-20150617223623;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MvcApplication1-20150617223623.mdf" providerName="System.Data.SqlClient" />
+    
+    <add name="PostDBContext" 
+     connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Posts.mdf;Integrated Security=True" 
+     providerName="System.Data.SqlClient" 
+    />
+    
+    <add name="CommentDBContext"
+       connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Comments.mdf;Integrated Security=True"
+       providerName="System.Data.SqlClient"
+  />
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
