--- a/MvcApplication1/MvcApplication1/Web.config
+++ b/MvcApplication1/MvcApplication1/Web.config
@@ -10,8 +10,13 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MvcApplication1-20150617223623;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MvcApplication1-20150617223623.mdf" providerName="System.Data.SqlClient" />
-    <add name="PostDBContext" 
-       connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" 
+    <add name="PostDBContext"
+       connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\MyPosts.mdf;Integrated Security=True"
+       providerName="System.Data.SqlClient"
+  />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MvcApplication1-20150617223623;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MvcApplication1-20150617223623.mdf" providerName="System.Data.SqlClient" />
+    <add name="CommentDBContext" 
+       connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Comments.mdf;Integrated Security=True" 
        providerName="System.Data.SqlClient" 
   /> 
   </connectionStrings>
